[project]
name = "pi3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.46.1",
    "huggingface-hub>=0.35.0",
    "matplotlib>=3.10.6",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "plyfile>=1.1.2",
    "safetensors>=0.6.2",
    "scipy>=1.16.2",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "trimesh>=4.8.2",
]
